test-files/syntax-error/4/errors
org.broadinstitute.parser.SyntaxError: Version information missing for task x
Location: /Users/sfrazer/projects/wdl/test-files/syntax-error/4/source.wdl @ line 3, column 8:

  step x {}
       ^
